[gd_scene load_steps=9 format=3 uid="uid://op0q2ud3qakr"]

[ext_resource type="Script" path="res://scripts/gameover.gd" id="1_1o6ip"]
[ext_resource type="FontFile" uid="uid://kupe4205a8kx" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="1_x0kls"]
[ext_resource type="FontFile" uid="uid://blgr3hgtr01hw" path="res://assets/fonts/PixelOperator8.ttf" id="2_snxfd"]
[ext_resource type="AudioStream" uid="uid://4uf3ul38g4rv" path="res://assets/music/gameover.mp3" id="4_rn5rw"]

[sub_resource type="LabelSettings" id="LabelSettings_11mbh"]
font = ExtResource("1_x0kls")
font_size = 40

[sub_resource type="Theme" id="Theme_nycci"]
default_font = ExtResource("2_snxfd")
default_font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_ebo5g"]
font = ExtResource("1_x0kls")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_t4lt7"]
font = ExtResource("1_x0kls")
font_size = 24
font_color = Color(0.957714, 0.503462, 0, 1)

[node name="Gameover" type="CanvasLayer"]
script = ExtResource("1_1o6ip")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.5
offset_top = -176.0
offset_right = 172.5
offset_bottom = -136.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_11mbh")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = 214.5
offset_right = 66.0
offset_bottom = 253.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_nycci")
theme_override_colors/font_hover_color = Color(0.137122, 0.645266, 1.92523e-07, 1)
theme_override_fonts/font = ExtResource("1_x0kls")
text = "MENU"

[node name="Scoreboard" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = 165.5
offset_right = 66.0
offset_bottom = 204.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_nycci")
theme_override_colors/font_hover_color = Color(0.137122, 0.645266, 1.92523e-07, 1)
theme_override_fonts/font = ExtResource("1_x0kls")
text = "SCORE"

[node name="TimeLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -11.5
offset_right = 38.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "00:00"
label_settings = SubResource("LabelSettings_ebo5g")

[node name="NewRecordLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 36.5
offset_right = 20.0
offset_bottom = 59.5
grow_horizontal = 2
grow_vertical = 2
text = "NEW RECORD!"
label_settings = SubResource("LabelSettings_t4lt7")

[node name="GameoverAudio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_rn5rw")

[connection signal="pressed" from="Control/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Control/Scoreboard" to="." method="_on_scoreboard_pressed"]
